completed the enitre backend including the all the apis,file management,background jobs,schedulers